# babel_crewai

./: .gitignore  README.md  pyproject.toml
doc/: Architecture.mermaid  v0.md  v0.mermaid
doc/v0/: v0.md  v0.mermaid
doc/v0.1/: v0.1.md  v0.1.mermaid  v0.1_seq.mermaid
src/babel/: crew.py  main.py  preparation_crew.py  translation_crew.py
src/babel/config/: agents.yaml  preparation_agents.yaml  preparation_tasks.yaml  tasks.yaml  translation_agents.yaml  translation_tasks.yaml
