[project]
name = "babel"
version = "0.1.0"
description = "babel using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0",
    "onnxruntime==1.15.0",
    "socksio>=1.0.0",
    "pyarrow==17.0.0",
]

[project.scripts]
babel = "babel.main:run"
run_crew = "babel.main:run"
train = "babel.main:train"
replay = "babel.main:replay"
test = "babel.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
